<resources>
    <string name="app_name">Material Tempo</string>

    <!--\u0020 = space (needed for leading and trailing whitespaces)-->
    <string name="action_settings">Settings</string>
    <string name="tap_here">Tap Here</string>

    <string name="italian_tempo">Italian tempo marking:\u0020</string>
    <string name="italian_tempo_plural">Italian tempo markings:\u0020</string>

    <string name="italian_tempos">Italian tempo markings</string>


    <string name="list_italians">List of Italian tempo markings</string>

    <string name="about_">About\u0020</string>
    <string name="_bpm" translatable="false">\u0020BPM</string>

    <string name="undef_bpm" translatable="false">- BPM</string>

    <string name="about_bpm">About - BPM</string>
    <string name="bpm_" translatable="false">BPM:</string>
    <string name="bpm" translatable="false">BPM</string>

    <string name="average_">Average:\u0020</string>
    <string name="average_bpm">Average: - BPM</string>

    <string name="tab_tempoTap">Tap Tempo</string>
    <string name="tab_favs">Favorites</string>
    <string name="tab_metronome">Metronome</string>

    <string name="fav">Favorite</string>

    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>


    <string name="sharedPref_favs" translatable="false">fi.zah.ollpu.materialtempo.favorites</string>

    <string name="favs_name">"Favorite's name:\u0020"</string>
    <string name="name_of_fav">Name of favorite</string>

    <string name="favs_empty">"There's nothing here!\nYou can add a favorite by pressing the star in the Tap Tempo -tab."</string>

    <string name="edit_fav">Edit Favorite</string>
    <string name="cancel">Cancel</string>
    <string name="name_">Name:</string>
    <string name="ok">OK</string>

    <string name="favEdit_overwrite_title">Overwrite existing favorite?</string>
    <string name="favEdit_overwrite_message">A favorite with this name already exists.</string>


</resources>
