<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
    android:layout_alignParentStart="true" android:layout_alignParentLeft="true"
    android:layout_alignParentBottom="true"
    android:fillViewport="false"
    android:measureAllChildren="false"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:layout_below="@+id/toolbar">




    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:measureAllChildren="true"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tap_card"
            android:layout_gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="3dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
            >


            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tap_frame"
                android:minHeight="200dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" android:layout_alignParentLeft="true">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_here"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tap"
                    android:layout_gravity="center"
                    android:longClickable="true"
                    android:ellipsize="start"
                    android:textSize="52sp" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tap_progress"
                    android:layout_gravity="center_horizontal|top"
                    android:progress="0"
                    android:max="800"
                    android:indeterminate="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/average_bpm"
                    android:id="@+id/avg_display"
                    android:layout_gravity="center_horizontal|bottom"
                    android:paddingBottom="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/undef_bpm"
                    android:id="@+id/display"
                    android:layout_marginTop="0dp"
                    android:layout_gravity="center_horizontal|top"
                    android:paddingTop="20dp"/>
            </FrameLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/info_card"
            android:layout_gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@id/tap_card"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" android:layout_alignParentLeft="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_bpm"
                android:id="@+id/info_title"
                android:layout_marginTop="0dp"
                android:layout_gravity="center_horizontal|top"
                android:paddingTop="16dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/italian_tempo"
                android:id="@+id/info"
                android:layout_gravity="center_horizontal|top"
                android:paddingTop="2dp"
                android:paddingRight="@dimen/card_padding"
                android:paddingLeft="@dimen/card_padding"
                android:layout_marginTop="48dp"
                android:maxLines="4"
                android:lines="4"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" android:layout_alignParentLeft="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/favName"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingTop="2dp"
                android:paddingRight="@dimen/card_padding"
                android:paddingLeft="@dimen/card_padding"
                android:layout_marginBottom="@dimen/card_padding"
                android:maxLines="1"
                android:lines="1"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" android:layout_alignParentLeft="true" />


            <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/favorite"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="@dimen/card_padding"
                android:layout_marginEnd="@dimen/card_padding" android:layout_marginRight="@dimen/card_padding"
                android:button="@drawable/btn_star_material"
                android:checked="false" />


        </android.support.v7.widget.CardView>


    </RelativeLayout>


</ScrollView>